--- a/index.html
+++ b/index.html
@@ -68,20 +68,15 @@
 
                 <ul class="header-nav__social">
                     <li>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/kk3kurshiah/"><i class="fa fa-facebook"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="https://twitter.com/KK3Kurshiah"><i class="fa fa-twitter"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/kk3kurshiah/"><i class="fa fa-instagram"></i></a>
                     </li>
-                    <li>
-                        <a href="#"><i class="fa fa-behance"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-dribbble"></i></a>
-                    </li>
+
                 </ul>
 
             </div> <!-- end header-nav__content -->
@@ -107,19 +102,19 @@
 
             <div class="row home-content__main">
 
-                <h3>Welcome to Glint</h3>
+                <h3>Selamat Datang ke</h3>
 
                 <h1>
                     Malam Anugerah <br>
-                    Kecemerlangan Kurshiah 2018                    
+                    Kecemerlangan Kurshiah 2018
                 </h1>
 
                 <div class="home-content__buttons">
                     <a href="#contact" class="smoothscroll btn btn--stroke">
-                        Start a Project
+                        Pendaftaran
                     </a>
                     <a href="#about" class="smoothscroll btn btn--stroke">
-                        More About Us
+                        Pencalonan
                     </a>
                 </div>
 
@@ -138,20 +133,15 @@
 
         <ul class="home-social">
             <li>
-                <a href="#0"><i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a>
+                <a href="https://www.facebook.com/kk3kurshiah/"><i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a>
             </li>
             <li>
-                <a href="#0"><i class="fa fa-twitter" aria-hidden="true"></i><span>Twiiter</span></a>
+                <a href="https://twitter.com/KK3Kurshiah"><i class="fa fa-twitter" aria-hidden="true"></i><span>Twiiter</span></a>
             </li>
             <li>
-                <a href="#0"><i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a>
+                <a href="https://www.instagram.com/kk3kurshiah/"><i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a>
             </li>
-            <li>
-                <a href="#0"><i class="fa fa-behance" aria-hidden="true"></i><span>Behance</span></a>
-            </li>
-            <li>
-                <a href="#0"><i class="fa fa-dribbble" aria-hidden="true"></i><span>Dribbble</span></a>
-            </li>
+
         </ul>
         <!-- end home-social -->
 
@@ -164,15 +154,15 @@
 
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead subhead--dark">Hello There</h3>
-                <h1 class="display-1 display-1--light">We Are Glint</h1>
+                <h3 class="subhead subhead--dark">#akk2018 #kk3kurshiah</h3>
+                <h1 class="display-1 display-1--light">Pengenalan</h1>
             </div>
         </div> <!-- end section-header -->
 
         <div class="row about-desc" data-aos="fade-up">
             <div class="col-full">
                 <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt.
+                Anugerah Kecemerlangan Kurshiah (AKK) diadakan pada setiap tahun bertujuan untuk menyampaikan penganugerahan kepada para pelajar yang telah menunjukkan pencapaian dalam melaksanakan kegiatan dan aktiviti selain mereka yang banyak berbakti dan berjasa kepada Kolej Kediaman Tuanku Kurshiah sepanjang sesi pengajian.
                 </p>
             </div>
         </div> <!-- end about-desc -->
@@ -180,20 +170,20 @@
         <div class="row about-stats stats block-1-4 block-m-1-2 block-mob-full" data-aos="fade-up">
 
             <div class="col-block stats__col ">
-                <div class="stats__count">127</div>
-                <h5>Awards Received</h5>
+                <div class="stats__count">+15</div>
+                <h5>Anugerah Khas</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">1505</div>
-                <h5>Cups of Coffee</h5>
+                <div class="stats__count">+5</div>
+                <h5>Kategori Pencalonan</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">109</div>
-                <h5>Projects Completed</h5>
+                <div class="stats__count">55</div>
+                <h5>Tahun ke</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">102</div>
-                <h5>Happy Clients</h5>
+                <div class="stats__count">+500</div>
+                <h5>Kehadiran</h5>
             </div>
 
         </div> <!-- end about-stats -->
@@ -209,8 +199,8 @@
 
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">What We Do</h3>
-                <h1 class="display-2">We’ve got everything you need to launch and grow your business</h1>
+                <h3 class="subhead">Nantikan pemenang-pemenang Anugerah berprestij KK3</h3>
+                <h1 class="display-2">Senarai Anugerah-anugerah</h1>
             </div>
         </div> <!-- end section-header -->
 
@@ -221,10 +211,14 @@
                     <i class="icon-paint-brush"></i>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Brand Identity</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h2">1.	Anugerah Unggul Datin Paduka Seri Rosmah Mansor</h3>
+                    <p>Anugerah khas ini disampaikan sebagai tanda penghargaan dan
+                      pengiktirafan kepada pelajar di atas segala jasa, sumbangan dan
+                      pengorbanan dalam melaksanakan tanggungjawab sebagai penghuni kolej
+                      kediaman dalam setiap kegiatan yang disertainya. Anugerah khas ini
+                      telah ditaja oleh YABhg, Datin Seri Paduka RosmahMansor,
+                      isteri YAB Perdana Menteri Malaysia merangkap alumna Kolej Kediaman
+                      Tuanku Kurshiah untuk tempoh 5 tahun (2016-2020)
                     </p>
                 </div>
             </div>
@@ -234,10 +228,14 @@
                     <i class="icon-group"></i>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Illustration</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h2">2. Anugerah Tokoh Kurshiah</h3>
+                    <p>Penerima merupakan seorang yang bergiat aktif dalam menyokong dan
+                      menganjurkan kegiatan-kegiatan di peringkat kolej, merupakan contoh
+                      kejayaan kepada penghuni yang lain dan mestilah terdiri dari kalangan
+                      pelajar yang terbaik dalam segala lapangan pada sesi akademik ini.
+                      Anugerah ini diberikan kepada penghuni yang menunjukkan kebolehan memimpin
+                      dan dipimpin serta memberikan sumbangan dalam proses pembangunan kolej
+                      kediaman dan Universiti Malaya.
                     </p>
                 </div>
             </div>
@@ -247,10 +245,8 @@
                     <i class="icon-megaphone"></i>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Marketing</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h2">3. Anugerah Khas Pengetua</h3>
+                    <p>Anugerah ini diberikan kepada mereka yang menjadi teladan kepada warga Kurshiah dalam pelbagai aspek. Penerima anugerah merupakan seorang yang cemerlang dalam pelbagai bidang dan sentiasa  berusaha dalam membantu pengurusan kolej kediaman dalam pembangunan pelajar. Atas nasihat yang diberikan oleh para Felo; penerima anugerah ini dipilih sendiri oleh Pengetua kolej.
                     </p>
                 </div>
             </div>
@@ -260,10 +256,8 @@
                     <i class="icon-earth"></i>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Web Design</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h2">4. Anugerah Jasa Bakti Kurshiah</h3>
+                    <p>Diberikan kepada mereka yang telah banyak memberikan sumbangan kepada pembangunan kolej kediaman dan menunjukkan pencapaian yang membanggakan kolej kediaman dan universiti. Penerima sedia berkhidmat terhadap kolej kediaman secara sukarela dalam setiap keadaan, mempunyai hubungan yang baik dengan warga kolej dan sentiasa bersedia membantu penghuni yang memerlukan bantuan.
                     </p>
                 </div>
             </div>
@@ -273,10 +267,8 @@
                     <i class="icon-cube"></i>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Packaging Design</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h2">5.	Anugerah Harapan Kurshiah</h3>
+                    <p>Anugerah ini diberikan kepada mereka yang telah menunjukkan pencapaian yang memberangsangkan dalam bidang yang mereka minati, berpotensi mencapai kejayaan yang gemilang dan berkebolehan memimpin dan dipimpin. Penerima mestilah bergiat aktif dalam menyokong dan menganjurkan kegiatan-kegiatan di kolej kediaman dan universiti. Penerima anugerah ini merupakan pelajar tahun pertama sahaja.
                     </p>
                 </div>
             </div>
@@ -284,13 +276,76 @@
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon"><i class="icon-lego-block"></i></div>
                 <div class="service-text">
-                    <h3 class="h2">Web Development</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h2">6.	Anugerah Kegiatan Terbaik Kurshiah</h3>
+                    <p>Kegiatan mestilah memberikan impak positif dalam diri peserta dari segi pemikiran kreatif dan kritis, kemahiran komunikasi, kemahiran organisasi, kemahiran menyelesaikan masalah dan pengurusan kewangan yang bijak. Kegiatan juga dinilai memberikan sumbangan kepada masyarakat serta menyumbang kepada kolej kediaman dan universiti. Hanya satu kegiatan daripada semua kegiatan yang dijalankan sepanjang sesi ini akan terpilih untuk menerima anugerah ini.
                     </p>
                 </div>
             </div>
+
+            <div class="col-block service-item" data-aos="fade-up">
+                <div class="service-icon"><i class="icon-lego-block"></i></div>
+                <div class="service-text">
+                    <h3 class="h2">7.	Anugerah Kelab Terbaik Kurshiah</h3>
+                    <p>Anugerah ini diberi kepada kelab yang menunjukkan prestasi terbaik sepanjang sesi ini. Kelab mestilah telah menjalankan kegiatan-kegiatan yang memberikan impak positif kepada ahlinya dari segi pemikiran kreatif dan kritis, kemahiran komunikasi, kemahiran organisasi, kemahiran menyelesaikan masalah dan pengurusan kewangan yang bijak. Kelab juga dinilai memberikan sumbangan kepada masyarakat serta menyumbang kepada kolej kediaman dan universiti. Hanya satu kelab akan terpilih untuk menerima anugerah ini. Kelab yang menerima anugerah ini mestilah telah diluluskan oleh Jawatankuasa Induk Kolej pada sesi ini.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-block service-item" data-aos="fade-up">
+                <div class="service-icon"><i class="icon-lego-block"></i></div>
+                <div class="service-text">
+                    <h3 class="h2">8.	Anugerah Integrasi Kurshiah</h3>
+                    <p>Pihak kolej sentiasa berusaha memperbanyakkan kegiatan yang boleh melibatkan pelbagai kaum untuk dilaksanakan sejajar dengan kehendak gagasan 1Malaysia yang mengutamakan keadilan sosial buat semua kaum dan penduduk. Anugerah ini diberikan kepada individu atau kumpulan pelajar yang mempunyai daya usaha integrasi nasional dan interaksi antara berbilang bangsa dengan cemerlang dalam mempereratkan persahabatan kaum demi perpaduan dan integrasi dalam menjalankan kegiatan-kegiatan di kolej.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-block service-item" data-aos="fade-up">
+                <div class="service-icon"><i class="icon-lego-block"></i></div>
+                <div class="service-text">
+                    <h3 class="h2">9.	Anugerah Sukan Kurshiah </h3>
+                    <p>i.	Anugerah ini diberikan kepada kumpulan yang terlibat aktif dalam aktiviti sukan. Kumpulan ini mestilah sentiasa menggunakan kebolehan yang ada pada mereka untuk membantu membangunkan penghuni yang lain bagi menaikkan nama kolej kediaman dalam bidang sukan serta memperoleh kejayaan dalam acara sukan yang pernah disertai di peringkat kolej/universiti/ kebangsaan/antarabangsa.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-block service-item" data-aos="fade-up">
+                <div class="service-icon"><i class="icon-lego-block"></i></div>
+                <div class="service-text">
+                    <h3 class="h2">10.	Anugerah Olahragawan Kurshiah </h3>
+                    <p>Penerima mestilah terlibat aktif dalam aktiviti sukan dan sentiasa menggunakan kebolehan yang ada dalam usaha membantu membangunkan penghuni lain untuk menaikkan nama kolej kediaman dalam bidang ini dan memperoleh kejayaan dalam acara sukan yang pernah disertai di peringkat kolej/universiti/kebangsaan/ antarabangsa.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-block service-item" data-aos="fade-up">
+                <div class="service-icon"><i class="icon-lego-block"></i></div>
+                <div class="service-text">
+                    <h3 class="h2">11.	Anugerah Aktivis Seni Kurshiah (Kumpulan)</h3>
+                    <p>Anugerah ini diberikan kepada kumpulan yang terlibat aktif dalam aktiviti kesenian dan kebudayaan. Kumpulan ini mestilah sentiasa menggunakan kebolehan yang ada pada mereka untuk membantu membangunkan penghuni yang lain bagi menaikkan nama kolej kediaman dalam bidang kesenian dan kebudayaan serta memperoleh kejayaan dalam acara kesenian yang pernah disertai di peringkat kolej/universiti/kebangsaan/antarabangsa.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-block service-item" data-aos="fade-up">
+                <div class="service-icon"><i class="icon-lego-block"></i></div>
+                <div class="service-text">
+                    <h3 class="h2">12.	Anugerah Seniman Kurshiah </h3>
+                    <p>Penerima mestilah terlibat aktif dalam aktiviti kesenian dan kebudayaan. Penerima mestilah telah menaikkan nama kolej kediaman dalam bidang ini serta memperoleh kejayaan dalam acara kesenian yang pernah disertai di peringkat kolej/universiti/ kebangsaan/antarabangsa.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-block service-item" data-aos="fade-up">
+                <div class="service-icon"><i class="icon-lego-block"></i></div>
+                <div class="service-text">
+                    <h3 class="h2">13.	Anugerah Akademik Kurshiah</h3>
+                    <p>Penerima Anugerah ini ialah mereka yang beriltizam dan menyumbang kepada pembangunan ilmu sejajar dengan misi universiti untuk memajukan ilmu pengetahuan dan pembelajaran melalui penyelidikan dan Pendidikan berkualiti untuk negara dan kemanusiaan. Dianugerahkan kepada pelajar yang memperoleh GPA 3.80 dan ke atas sekurang-kurangnya untuk tempoh 2 semester berturut-turut.
+                    </p>
+                </div>
+            </div>
+
+
 
         </div> <!-- end services-list -->
 
