--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <li><a class="smoothscroll"  href="#about" title="about">Pengenalan</a></li>
                     <li><a class="smoothscroll"  href="#services" title="services">Anugerah</a></li>
                     <li><a class="smoothscroll"  href="#works" title="works">AKK54</a></li>
-                    <li><a class="smoothscroll"  href="#clients" title="clients">Sponsors</a></li>
+                    <li><a class="smoothscroll"  href="#clients" title="clients">Penyumbang</a></li>
                     <li><a class="smoothscroll"  href="#contact" title="contact">Hubungi Kami</a></li>
                 </ul>
 
@@ -110,7 +110,7 @@
                 </h1>
 
                 <div class="home-content__buttons">
-                    <a href="#contact" class="smoothscroll btn btn--stroke">
+                    <a href="https://form.jotform.me/70401518956457" target="_blank" class="smoothscroll btn btn--stroke">
                         Pendaftaran
                     </a>
                     <a href="#about" class="smoothscroll btn btn--stroke">
@@ -164,6 +164,18 @@
                 <p>
                 Anugerah Kecemerlangan Kurshiah (AKK) diadakan pada setiap tahun bertujuan untuk menyampaikan penganugerahan kepada para pelajar yang telah menunjukkan pencapaian dalam melaksanakan kegiatan dan aktiviti selain mereka yang banyak berbakti dan berjasa kepada Kolej Kediaman Tuanku Kurshiah sepanjang sesi pengajian.
                 </p>
+                <a href="https://form.jotform.me/73503347477461" target="_blank" class="smoothscroll btn btn-primary mb1 bg-navy">
+                    Pencalonan Individu
+                </a>
+                <a href="https://form.jotform.me/80450922581455" target="_blank" class="smoothscroll btn btn-primary mb1 bg-teal">
+                    Pencalonan Kumpulan
+                </a><br>
+                <a href="https://form.jotform.me/73503685277464" target="_blank" class="smoothscroll btn btn-primary mb1 bg-lime">
+                    Pencalonan Kegiatan & Kelab
+                </a>
+                <a href="https://form.jotform.me/73503668877471" target="_blank" class="smoothscroll btn btn-primary mb1 bg-orange">
+                    Pencalonan Utama
+                </a>
             </div>
         </div> <!-- end about-desc -->
 
@@ -364,7 +376,7 @@
 
         <div class="row services-list block-1-2 block-tab-full">
 
-            <div class="col-block service-item" data-aos="fade-left">
+            <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon">
                     <i class="icon-paint-brush"></i>
                 </div>
@@ -431,7 +443,7 @@ segala urusan berkaitan pelajar dengan cekap malah buah fikirannya juga dianggap
 
         <div class="row works-content">
             <div class="col-full masonry-wrap">
-                <iframe width="1100" height="500" src="https://www.youtube.com/embed/b9GUxks3haI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe width="100%" height="500" src="https://www.youtube.com/embed/b9GUxks3haI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div> <!-- end col-full -->
             <p>AKK54 mengetengahkan tema “First Love,”. Tema ini diperincikan kepada 3 iaitu, Cinta kepada Pasangan, Cinta Kepada Ibu Bapa dan Cinta kepada Agama. Anugerah Kecemerlangan Kurshiah Ke-54 diadakan untuk meraikan penghuni Kolej Kediaman Tuanku Kurshiah terutama kepada mereka yang berjasa kepada kolej sepanjang sesi 2016/2017. #FirstLove #SiKurshiahUM</p>
         </div> <!-- end works-content -->
