--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@ segala urusan berkaitan pelajar dengan cekap malah buah fikirannya juga dianggap
 
                 <h3 class="h6">Send Us A Message</h3>
 
-                <form name="contactForm" id="contactForm" method="post" enctype="text/plain" action="mailto:booluckgmie@gmail.com" novalidate="novalidate">
+                <form action="MAILTO:booluckgmie@gmail.com" method="post" enctype="text/plain">
                     <fieldset>
 
                     <div class="form-field">
