--- a/index.html
+++ b/index.html
@@ -502,8 +502,9 @@ segala urusan berkaitan pelajar dengan cekap malah buah fikirannya juga dianggap
 
                 <h3 class="h6">Send Us A Message</h3>
 
-                <form action="MAILTO:booluckgmie@gmail.com" method="post" enctype="text/plain">
-                    <fieldset>
+                <fieldset>
+
+                      <form name="contactForm" id="contactForm" action="MAILTO:booluckgmie@gmail.com" method="post" enctype="text/plain" novalidate="novalidate">
 
                     <div class="form-field">
                         <input name="contactName" type="text" id="contactName" placeholder="Your Name" value="" minlength="2" required="" aria-required="true" class="full-width">
