--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@ segala urusan berkaitan pelajar dengan cekap malah buah fikirannya juga dianggap
 
                 <h3 class="h6">Send Us A Message</h3>
 
-                <form name="contactForm" id="contactForm" method="post" action="https://myketapang.github.io/akk2018/inc/sendEmail.php" novalidate="novalidate">
+                <form name="contactForm" id="contactForm" method="post" action="#" novalidate="novalidate">
                     <fieldset>
 
                     <div class="form-field">
