--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <li><a class="smoothscroll"  href="#services" title="services">Anugerah</a></li>
                     <li><a class="smoothscroll"  href="#works" title="works">AKK54</a></li>
                     <li><a class="smoothscroll"  href="#clients" title="clients">Penyumbang</a></li>
-                    <li><a class="smoothscroll"  href="#contact" title="contact">Hubungi Kami</a></li>
+                    <li><a class="smoothscroll"  href="#contact" title="contact">Sekretariat AKK55</a></li>
                 </ul>
 
                 <p>Perspiciatis hic praesentium nesciunt. Et neque a dolorum <a href='#0'>voluptatem</a> porro iusto sequi veritatis libero enim. Iusto id suscipit veritatis neque reprehenderit.</p>
@@ -110,9 +110,8 @@
                 </h1>
 
                 <div class="home-content__buttons">
-                    <a href="https://form.jotform.me/70401518956457" target="_blank" class="smoothscroll btn btn--stroke">
-                        Pendaftaran
-                    </a>
+                    <a class="smoothscroll btn btn--stroke" href="https://form.jotform.me/70401518956457">Pendaftaran</a>
+
                     <a href="#about" class="smoothscroll btn btn--stroke">
                         Pencalonan
                     </a>
@@ -451,36 +450,6 @@ segala urusan berkaitan pelajar dengan cekap malah buah fikirannya juga dianggap
     </section> <!-- end s-works -->
 
 
-    <!-- clients
-    ================================================== -->
-    <section id="clients" class="s-clients">
-
-        <div class="row section-header" data-aos="fade-up">
-            <div class="col-full">
-                <h3 class="subhead">Penyumbang yang sentiasa disisi kami</h3>
-                <h1 class="display-2">Penyumbang Utama</h1>
-            </div>
-        </div> <!-- end section-header -->
-
-        <div class="row clients-outer" data-aos="fade-up">
-            <div class="col-full">
-                <div class="clients">
-
-                    <a href="#0" title="" class="clients__slide"><img src="images/clients/apple.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/clients/atom.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/clients/blackberry.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/clients/dropbox.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/clients/envato.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/clients/firefox.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/clients/joomla.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/clients/magento.png" /></a>
-
-                </div> <!-- end clients -->
-            </div> <!-- end col-full -->
-        </div> <!-- end clients-outer -->
-
-    </section> <!-- end s-clients -->
-
 
     <!-- contact
     ================================================== -->
@@ -491,7 +460,7 @@ segala urusan berkaitan pelajar dengan cekap malah buah fikirannya juga dianggap
 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">hubungi Kami</h3>
+                <h3 class="subhead">AHLI SEKRETARIAT AKK55</h3>
 
             </div>
         </div>
@@ -500,47 +469,55 @@ segala urusan berkaitan pelajar dengan cekap malah buah fikirannya juga dianggap
 
             <div class="contact-primary">
 
-                <h3 class="h6">Send Us A Message</h3>
+                <h3 class="h6">
+                  <u>KETUA SEKRETARIAT :</u> <br>SARIP BIN SAAT <br><br>
+                  <u>SETIAUSAHA :</u> <br>NURUL ‘IZZATI BINTI ZAINUDIN <br><br>
+                  <u>BENDAHARI :</u> <br>NG YEE LUAN <br><br>
+                  <u>KETUA UNIT PROTOKOL :</u> <br>WAN ADLI IQBAL BIN ABDUL RAHMAN<br><br>
+                  - NURUL SHAHIRAH BINTI SHAFI’EI<br>
+                  - NURUL ANA AFINA BINTI ABD HADI <br>
+                  - NURAMIZA BINTI MOHD HANAFIAH<br><br>
+                  <u>KETUA UNIT TAJAAN :</u> <br>FATHINATASHA BINTI KHAIRUL AKMAN<br><br>
+                  - NURUL AFIQAH BINTI ABDULLAH<br>
+                  - LOW JIA MING <br>
+                  - LAI YONG ZHU<br><br>
+                  <u>KETUA UNIT PERSEMBAHAN :</u> <br>MICHELLE CHIN LOKE EE<br><br>
+                  - ASHWINI PUNIYAMURTI<br>
+                  - KONG YIN XUAN <br>
+                  - HIEW ZI EN<br><br>
+                  <u>KETUA UNIT CENDERAMATA :</u> <br>THURGA A/P RAVI<br><br>
+                  - NOOR ASHIKIN BINTI OSMAN<br>
+                  - PRAVENNA PRATAPA <br>
+                  - ROOSHINI A/P SUBRAMANIAM<br>
+                  - PUTRI ‘ATIQAH BINTI SAYUTI<br><br>
+                  <u>KETUA UNIT CENDERAMATA :</u> <br>THURGA A/P RAVI<br><br>
+                  - NOOR ASHIKIN BINTI OSMAN<br>
+                  - PRAVENNA PRATAPA <br>
+                  - ROOSHINI A/P SUBRAMANIAM<br>
+                  - PUTRI ‘ATIQAH BINTI SAYUTI<br><br>
+                  <u>KETUA UNIT TEKNIKAL :</u> <br>FAKHRUL NAZMI BIN SHAFII<br><br>
+                  - MUHAMMAD IZZANY BIN ZAINI<br>
+                  - NG HUEY YING <br>
+                  - SHAWN TAY WEI SHENG<br>
+                  - FARIDA KAMILIA BINTI AZIZAN<br><br>
+                  <u>KETUA UNIT HUBUNGAN KORPORAT :</u> <br>NURUL NABIHAH BINTI ABDUL JALIL<br><br>
+                  - YONG ZI VUN<br><br>
+                  <u>PUBLISITI & PEMASARAN:</u> <br>MUHAMMAD NADZMI BIN HUSSIN
+                  <br>EUNICE CHENG HUI YEN<br><br>
+                  <u>KETUA UNIT LOGISTIK :</u> <br>RAIHANAH BINTI JAMSARI MOHAMAD<br><br>
+                  - MOHAMMAD DANIAL HAIKAL BIN MOHD SAID<br>
+                  - MUHAMMAD FITRI BIN MOHAMED FATHIL <br>
+                  - MOHD NAJMI AFIFI BIN MOHD NASIR<br>
+                  - NUR AINAA NAJIHAH BINTI MOHD ROSELEE<br>
+                  - NUR SHAFIQAH BINTI MOHD SAYUTI<br><br>
+                  <u>KETUA UNIT PENDAFTARAN :</u> <br>AHMAD FIKRI AISAMUDDIN BIN MAZLAN<br><br>
+                  - ELYSA SYAZWANA BINTI SAMAN<br>
+                  - IMRA SYAZWANI BINTI AYUB <br>
+                  - NURKHAIRUNNISA BINTI ISNAN<br>
+                  - NOR LAILA BINTI AZIZI<br><br>
 
-                <form name="contactForm" id="contactForm" method="post" action="#" novalidate="novalidate">
-                    <fieldset>
+                </h3>
 
-                    <div class="form-field">
-                        <input name="contactName" type="text" id="contactName" placeholder="Your Name" value="" minlength="2" required="" aria-required="true" class="full-width">
-                    </div>
-                    <div class="form-field">
-                        <input name="contactEmail" type="email" id="contactEmail" placeholder="Your Email" value="" required="" aria-required="true" class="full-width">
-                    </div>
-                    <div class="form-field">
-                        <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="" class="full-width">
-                    </div>
-                    <div class="form-field">
-                        <textarea name="contactMessage" id="contactMessage" placeholder="Your Message" rows="10" cols="50" required="" aria-required="true" class="full-width"></textarea>
-                    </div>
-                    <div class="form-field">
-                        <button class="full-width btn--primary">Submit</button>
-                        <div class="submit-loader">
-                            <div class="text-loader">Sending...</div>
-                            <div class="s-loader">
-                                <div class="bounce1"></div>
-                                <div class="bounce2"></div>
-                                <div class="bounce3"></div>
-                            </div>
-                        </div>
-                    </div>
-
-                    </fieldset>
-                </form>
-
-                <!-- contact-warning -->
-                <div class="message-warning">
-                    Something went wrong. Please try again.
-                </div>
-
-                <!-- contact-success -->
-                <div class="message-success">
-                    Your message was sent, thank you!<br>
-                </div>
 
             </div> <!-- end contact-primary -->
 
@@ -605,14 +582,14 @@ segala urusan berkaitan pelajar dengan cekap malah buah fikirannya juga dianggap
             <div class="col-six tab-full left footer-desc">
 
                 <div class="footer-logo"></div>
-                Proin eget tortor risus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Nulla porttitor accumsan tincidunt. Nulla porttitor accumsan tincidunt. Quaerat voluptas autem necessitatibus vitae aut.
+                Anugerah Kecemerlangan Kurshiah (AKK) diadakan pada setiap tahun bertujuan untuk menyampaikan penganugerahan kepada para pelajar yang telah menunjukkan pencapaian dalam melaksanakan kegiatan dan aktiviti selain mereka yang banyak berbakti dan berjasa kepada Kolej Kediaman Tuanku Kurshiah sepanjang sesi pengajian.
 
             </div>
 
             <div class="col-six tab-full right footer-subscribe">
 
-                <h4>Ambil maklum</h4>
-                <p>Untuk sebarang pertanyaan, sila hubungi kami.</p>
+                <h4>Untuk maklumat lanjut</h4>
+                <p>sila hubungi kami.</p>
 
                 <div class="subscribe-form">
                     <form id="mc-form" class="group" novalidate="true">
