--- a/references.html
+++ b/references.html
@@ -700,7 +700,36 @@ segala urusan berkaitan pelajar dengan cekap malah buah fikirannya juga dianggap
 
     </section> <!-- end s-clients -->
 
+    <!-- clients
+    ================================================== -->
+    <section id="clients" class="s-clients">
 
+        <div class="row section-header" data-aos="fade-up">
+            <div class="col-full">
+                <h3 class="subhead">Penyumbang yang sentiasa disisi kami</h3>
+                <h1 class="display-2">Penyumbang Utama</h1>
+            </div>
+        </div> <!-- end section-header -->
+
+        <div class="row clients-outer" data-aos="fade-up">
+            <div class="col-full">
+                <div class="clients">
+
+                    <a href="#0" title="" class="clients__slide"><img src="images/clients/apple.png" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/clients/atom.png" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/clients/blackberry.png" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/clients/dropbox.png" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/clients/envato.png" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/clients/firefox.png" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/clients/joomla.png" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/clients/magento.png" /></a>
+
+                </div> <!-- end clients -->
+            </div> <!-- end col-full -->
+        </div> <!-- end clients-outer -->
+
+    </section> <!-- end s-clients -->
+    
     <!-- contact
     ================================================== -->
     <section id="contact" class="s-contact">
