--- a/index.html
+++ b/index.html
@@ -105,12 +105,13 @@
                 <h3>Selamat Datang ke</h3>
 
                 <h1>
-                    Malam Anugerah <br>
+                    Malam Anugerah (AKK55)<br>
                     Kecemerlangan Kurshiah 2018
                 </h1>
 
                 <div class="home-content__buttons">
-                    <a class="smoothscroll btn btn--stroke" href="https://form.jotform.me/70401518956457">Pendaftaran</a>
+                    <a href="#registration" class="smoothscroll btn btn--stroke">
+                      Pendaftaran</a>
 
                     <a href="#about" class="smoothscroll btn btn--stroke">
                         Pencalonan
@@ -572,6 +573,27 @@ segala urusan berkaitan pelajar dengan cekap malah buah fikirannya juga dianggap
 
     </section> <!-- end s-contact -->
 
+<!-- registration
+    ================================================== -->
+    <section id='registration' class="s-services">
+
+        <div class="row section-header has-bottom-sep" data-aos="fade-up">
+            <div class="col-full">
+                <h3 class="subhead">Sama-sama kita memeriahkan AKK55</h3>
+                <h1 class="display-2">Pendaftaran</h1>
+            </div>
+
+              <!-- 16:9 aspect ratio -->
+              <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" width="100%" height="1300" src="https://form.jotform.me/70401518956457" allowfullscreen></iframe>
+            </div>
+
+          </div>
+        </div> <!-- end section-header -->
+
+        <div class="row services-list block-1-2 block-tab-full"></div>
+
+      </section>
 
     <!-- footer
     ================================================== -->
