date and location / other forms

--- a/index.html
+++ b/index.html
@@ -64,8 +64,6 @@
                     <li><a class="smoothscroll"  href="#contact" title="contact">Sekretariat AKK55</a></li>
                 </ul>
 
-                <p>Perspiciatis hic praesentium nesciunt. Et neque a dolorum <a href='#0'>voluptatem</a> porro iusto sequi veritatis libero enim. Iusto id suscipit veritatis neque reprehenderit.</p>
-
                 <ul class="header-nav__social">
                     <li>
                         <a href="https://www.facebook.com/kk3kurshiah/"><i class="fa fa-facebook"></i></a>
@@ -109,6 +107,7 @@
                     Kecemerlangan Kurshiah 2018
                 </h1>
 
+                <h3>15 April 2018 // Palace of the Golden Horses Hotel</h3>
                 <div class="home-content__buttons">
                     <a href="#registration" class="smoothscroll btn btn--stroke">
                       Pendaftaran</a>
@@ -164,16 +163,16 @@
                 <p>
                 Anugerah Kecemerlangan Kurshiah (AKK) diadakan pada setiap tahun bertujuan untuk menyampaikan penganugerahan kepada para pelajar yang telah menunjukkan pencapaian dalam melaksanakan kegiatan dan aktiviti selain mereka yang banyak berbakti dan berjasa kepada Kolej Kediaman Tuanku Kurshiah sepanjang sesi pengajian.
                 </p>
-                <a href="https://form.jotform.me/73503347477461" target="_blank" class="smoothscroll btn btn-primary mb1 bg-navy">
+                <a href="https://form.jotform.me/73503347477461" target="_blank" class="btn btn-info btn-lg">
                     Pencalonan Individu
                 </a>
-                <a href="https://form.jotform.me/80450922581455" target="_blank" class="smoothscroll btn btn-primary mb1 bg-teal">
+                <a href="https://form.jotform.me/80450922581455" target="_blank" class="btn btn-info btn-lg">
                     Pencalonan Kumpulan
                 </a><br>
-                <a href="https://form.jotform.me/73503685277464" target="_blank" class="smoothscroll btn btn-primary mb1 bg-lime">
+                <a href="https://form.jotform.me/73503685277464" target="_blank" class="btn btn-info btn-lg">
                     Pencalonan Kegiatan & Kelab
                 </a>
-                <a href="https://form.jotform.me/73503668877471" target="_blank" class="smoothscroll btn btn-primary mb1 bg-orange">
+                <a href="https://form.jotform.me/73503668877471" target="_blank" class="btn btn-info btn-lg">
                     Pencalonan Utama
                 </a>
             </div>
