--- a/index.html
+++ b/index.html
@@ -527,30 +527,25 @@ segala urusan berkaitan pelajar dengan cekap malah buah fikirannya juga dianggap
                     <h3 class="h6 hide-on-fullwidth">Contact Info</h3>
 
                     <div class="cinfo">
-                        <h5>Where to Find Us</h5>
+                        <h5>Lokasi</h5>
                         <p>
-                            Kolej Kediaman Tuanku Kurshiah<br>
-                            Jalan Universiti, Universiti Malaya<br>
-                            50603 Kuala Lumpur
+                          Palace of the Golden Horses <br>
+                          Jalan Kuda Emas, <br>
+                          Mines Wellness City, <br>
+                          43300 Seri Kembangan, Selangor <br>
                         </p>
                     </div>
 
                     <div class="cinfo">
-                        <h5>Email Us At</h5>
+                        <h5>Contact us at</h5>
                         <p>
-                            kk3kurshiah@um.edu.my<br>
-                            kk3kurshiah.com
+                            saripsaat7@gmail.com<br>
+                            0122035313 (Sarip Saat)
+
                         </p>
                     </div>
 
-                    <div class="cinfo">
-                        <h5>Call Us At</h5>
-                        <p>
-                            Phone: (+63) 555 1212<br>
-                            Mobile: (+63) 555 0100<br>
-                            Fax: (+63) 555 0101
-                        </p>
-                    </div>
+
 
                     <ul class="contact-social">
                         <li>
