--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="http://www.jacklmoore.com/colorbox/example1/colorbox.css" />
 
     <!-- script
     ================================================== -->
@@ -697,6 +698,15 @@ segala urusan berkaitan pelajar dengan cekap malah buah fikirannya juga dianggap
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="http://www.jacklmoore.com/colorbox/jquery.colorbox.js"></script>
+    <script>
+    function openColorBox(){
+    $.colorbox({iframe:false, width:"35%", height:"100%", href: "images/noty_AKK55.jpeg"});
+    }
+
+    setTimeout(openColorBox, 1000);
+    </script>
 
 </body>
 
