--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@ segala urusan berkaitan pelajar dengan cekap malah buah fikirannya juga dianggap
     <script src="http://www.jacklmoore.com/colorbox/jquery.colorbox.js"></script>
     <script>
     function openColorBox(){
-    $.colorbox({iframe:false, width:"80%", height:"100%", href: "images/noty_AKK55.jpeg"});
+    $.colorbox({iframe:true, width:"730", height:"1100", align:"center", href: "images/noty_AKK55.jpeg"});
     }
 
     setTimeout(openColorBox, 1000);
