--- a/index.html
+++ b/index.html
@@ -598,15 +598,15 @@ segala urusan berkaitan pelajar dengan cekap malah buah fikirannya juga dianggap
 
             <div class="col-six tab-full left footer-desc">
 
-                
-                Anugerah Kecemerlangan Kurshiah (AKK) diadakan pada setiap tahun bertujuan untuk menyampaikan penganugerahan kepada para pelajar yang telah menunjukkan pencapaian dalam melaksanakan kegiatan dan aktiviti selain mereka yang banyak berbakti dan berjasa kepada Kolej Kediaman Tuanku Kurshiah sepanjang sesi pengajian.
+                <h3 class="subhead" >Malam Anugerah Kecemerlangan Kurshiah 2018</h3>
+                <br>Anugerah Kecemerlangan Kurshiah (AKK) diadakan pada setiap tahun bertujuan untuk menyampaikan penganugerahan kepada para pelajar yang telah menunjukkan pencapaian dalam melaksanakan kegiatan dan aktiviti selain mereka yang banyak berbakti dan berjasa kepada Kolej Kediaman Tuanku Kurshiah sepanjang sesi pengajian.
 
             </div>
 
             <div class="col-six tab-full right footer-subscribe">
 
                 <h4>Untuk maklumat lanjut</h4>
-                <p>sila hubungi kami.</p>
+                <p>Sila hubungi kami.</p>
 
                 <div class="subscribe-form">
                     <form id="mc-form" class="group" novalidate="true">
