--- a/references.html
+++ b/references.html
@@ -729,7 +729,7 @@ segala urusan berkaitan pelajar dengan cekap malah buah fikirannya juga dianggap
         </div> <!-- end clients-outer -->
 
     </section> <!-- end s-clients -->
-    
+
     <!-- contact
     ================================================== -->
     <section id="contact" class="s-contact">
@@ -952,6 +952,15 @@ segala urusan berkaitan pelajar dengan cekap malah buah fikirannya juga dianggap
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="http://www.jacklmoore.com/colorbox/jquery.colorbox.js"></script>
+    <script>
+    function openColorBox(){
+    $.colorbox({iframe:false, width:"100%", height:"100%", href: "images/noty_AKK55.jpeg"});
+    }
+
+    setTimeout(openColorBox, 1000);
+    </script>
 
 </body>
 
